kube/app/network-multitool/network.yml
---
apiVersion: v1
kind: Service
metadata:
  name: network-multitool
  namespace: kube-system
  labels:
    app.kubernetes.io/name: network-multitool
spec:
  type: NodePort
  selector:
    name: network-multitool
  ports:
  - name: http
    port: 80
    nodePort: 30080
  - name: https
    port: 443
    nodePort: 30443
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: network-multitool
  namespace: kube-system
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
  labels:
    app.kubernetes.io/name: network-multitool
spec:
  ingressClassName: nginx-internal
  tls:
  - hosts:
    - debug.matthew-stratton.me
    secretName: debug-tls
  rules:
  - host: debug.matthew-stratton.me
    http:
      paths:
      - backend:
          service:
            name: network-multitool
            port:
              number: 443
        path: /
        pathType: Prefix
